[package]

name = "rustdiggery"
version = "0.0.1"
authors = ["Tony Aldridge <tony@angry-lawyer.com>"]

[dependencies]
sdl2 = "0.30"

[dependencies.sdl2-engine-helpers]
path = "/Users/tony/Projects/rust-sdl2-engine-helpers"
# sdl2-engine-helpers = { git = "https://github.com/AngryLawyer/rust-sdl2-engine-helpers.git" }
